--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//erreurs/erreur.php=UTF-8
 encoding//util/secure_conn.php=UTF-8
 encoding/<project>=UTF-8
 encoding/index.php=UTF-8
